<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FLAT</string>

    <string name="action_settings">Settings</string>

    <string name="action_service_power">Background Service</string>
    <string name="action_bt_test">Send test data</string>
    <string name="action_bt_set_max">Set max connections</string>

    <string name="action_clear_log">Clear Log</string>

    <string name="persist_service">Persist</string>

    <string name="bt_not_supported">Device does not support Bluetooth</string>
    <string name="connection_states">Connection States</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="toast_bt_connected">Connected to %1$s, index %2$d.</string>
    <string name="toast_bt_connection_failed">Failed connection to index %1$d.</string>
    <string name="toast_bt_connection_lost">Lost connection to %1$s, index %2$d.</string>
    <string name="action_bt_refresh_log">Refresh Log</string>
    <string name="action_bt_clear_log">Clear Log</string>
    <string name="action_bt_view_log">View Log</string>
    <string name="action_bt_reset_hci">Clear HCI</string>

    <string name="action_wifi_start_scans">Start scans</string>
    <string name="action_log_scans">Toggle logfile</string>
    <string name="action_scan_interval">Scan interval...</string>
    <string name="action_view_log">View Log</string>



    <string name="connect">Connect</string>

    <string name="discover">Discover</string>

    <string name="register">Register</string>

    <string name="send">Send</string>
    <string name="action_other_tests">Other Tests</string>
    <string name="ble_not_supported">Bluetooth Low Energy not available on this device.</string>
    <string name="enable_bt">Please enable Bluetooth.</string>
</resources>
