<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_log_scans"
        android:title="@string/action_log_scans"
        android:orderInCategory="10"
        android:checkable="true"
        android:showAsAction="never" />
    <item android:id="@+id/action_view_log"
        android:title="@string/action_view_log"
        android:orderInCategory="20"
        android:checkable="true"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_clear_log"
        android:title="@string/action_clear_log"
        android:orderInCategory="30"
        android:showAsAction="never" />
    <item android:id="@+id/action_scan_interval"
        android:title="@string/action_scan_interval"
        android:orderInCategory="40"
        android:showAsAction="ifRoom" />
</menu>
